# lsplus

./: .gitignore  .markdownlint.yaml  404.html  BUGS.md  CHANGELOG.md  Cargo.toml  LICENSE.txt  Makefile.toml  README.md  TODO.html  TODO.md  config.html  config.toml  deny.toml  index.html  installation.html  intro.html  print.html  searcher-09f2665d.js  searcher-c2a407aa.js  searchindex-35c91a41.js  searchindex-745e07e1.js  searchindex-f1c8cac1.js  searchindex.js  searchindex.json  toc-024fe58e.js  toc-e3abe26b.js  toc.html  toc.js  todo.html  usage.html
.github/: dependabot.yml  renovate.json
.github/actions/setup-rust/: action.yml
.github/workflows/: gh-pages.yml  release.yml  rust.yml  zizmor.yml
.husky/: pre-commit  pre-push
docs/: book.toml
docs/src/: SUMMARY.md  config.md  installation.md  intro.md  todo.md  usage.md
src/: app.rs  cli.rs  lib.rs  main.rs  settings.rs  structs.rs  utils.rs
src/platform/: mod.rs  unix.rs  windows.rs
src/utils/: color.rs  file.rs  format.rs  fuzzy_time.rs  gitignore.rs  icons.rs  render.rs  table.rs  time.rs
tests/: app.rs  cli.rs  file.rs  format.rs  fuzzy_time.rs  gitignore.rs  icons.rs  integration.rs  integration_test.rs  integration_unix.rs  integration_windows.rs  main.rs  render.rs  seams.rs  settings.rs  structs.rs
tests/common/: mod.rs
tests/crate/: app.rs  cli.rs  common.rs  file.rs  file_unix.rs  file_windows.rs  gitignore.rs  icons.rs  render.rs  render_unix.rs  render_windows.rs  settings.rs
