[package]
name = "lsplus"
version = "0.1.0"
edition = "2021"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
description = "A replacement for the 'ls' command written in Rust."
license = "MIT"
homepage = "https://seapagan.github.io/lsplus/"
repository = "https://github.com/seapagan/lsplus"
readme = "README.md"
categories = ["command-line-utilities","filesystem"]
keywords = ["ls", "command-line", "utility", "file-system", "listing"]
exclude = [".github/*", "docs/*"]

[[bin]]
name = "lsp"
path = "src/main.rs"

[dependencies]
chrono = "0.4.38"
clap = {version = "4.5.9", features=["derive"]}
inline_colorization = "0.1.6"
nix = {version = "0.29.0", features = ["user"]}
prettytable = "0.10.0"
term_size = "0.3.2"
