[package]
name = "lsplus"
version = "0.6.0"
edition = "2021"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
description = "A replacement for the 'ls' command written in Rust."
license = "MIT"
homepage = "https://seapagan.github.io/lsplus/"
repository = "https://github.com/seapagan/lsplus"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["ls", "command-line", "utility", "file-system", "listing"]
exclude = [".github/*", "docs/*"]

[[bin]]
name = "lsp"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
glob = "0.3.1"
clap = { version = "4.5.37", features = ["derive"] }
inline_colorization = "0.1.6"
nix = { version = "0.30.1", features = ["user"] }
prettytable = "0.10.0"
term_size = "0.3.2"
config = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
dirs-next = "2.0.0"
strip-ansi-escapes = "0.2.1"

[dev-dependencies]
tempfile = "3.19.1"
assert_cmd = "2.0.12"
predicates = "3.0.4"
filetime = "0.2.23"
