[package]
name = "lsplus"
version = "0.12.0"
edition = "2024"
authors = ["Grant Ramsay <seapagan@gmail.com>"]
description = "A replacement for the 'ls' command written in Rust."
license = "MIT"
homepage = "https://seapagan.github.io/lsplus/"
repository = "https://github.com/seapagan/lsplus"
readme = "README.md"
categories = ["command-line-utilities", "filesystem"]
keywords = ["ls", "command-line", "utility", "file-system", "listing"]
exclude = [".github/*", "docs/*"]

[[bin]]
name = "lsp"
path = "src/main.rs"

[dependencies]
chrono = "0.4.41"
glob = "0.3.1"
clap = { version = "4.5.37", features = ["derive"] }
colored_text = "0.5.1"
terminal_size = "0.4.4"
config = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
dirs-next = "2.0.0"
strip-ansi-escapes = "0.2.1"
unicode-width = "0.2.0"
ignore = "0.4.25"
uutils_term_grid = "0.8.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.0", features = ["fs", "user"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_Globalization",
] }

[dev-dependencies]
tempfile = "3.19.1"
assert_cmd = "2.0.12"
predicates = "3.0.4"
filetime = "0.2.23"
temp-env = "0.3.6"
husky-rs = "0.3.2"
